# book_tracker

./: .env.example  .gitignore  AGENTS.md  README.md  package-lock.json  package.json  vitest.setup.ts
.specify/memory/: constitution.md
.specify/templates/: plan.md  spec.md  tasks.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: achievements.py  auth.py  books.py  challenges.py
backend/app/core/: __init__.py  config.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  achievement.py  book.py  challenge.py  user.py
backend/app/schemas/: achievement.py  auth.py  book.py  challenge.py
backend/app/scripts/: create_user.py
backend/app/services/: __init__.py  achievements.py  books.py  challenges.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_baseline.py  0002_achievement_unlocks.py
backend/tests/: conftest.py  test_achievements_api.py  test_auth.py  test_books_api.py  test_challenges_api.py  test_config.py  test_create_user.py  test_db_models.py  test_health.py
docs/: RUNBOOK.md
specs/001-add-book/: plan.md  spec.md  tasks.md
specs/002-shelf-list/: plan.md  spec.md  tasks.md
specs/003-edit-book/: plan.md  spec.md  tasks.md
specs/004-delete-book/: plan.md  spec.md  tasks.md
specs/005-detail-view/: plan.md  spec.md  tasks.md
specs/006-rating/: plan.md  spec.md  tasks.md
specs/007-review/: plan.md  spec.md  tasks.md
specs/008-rich-text-review/: plan.md  spec.md  tasks.md
src/app/: globals.css  (+3 more)
(+242 files in other folders)
